Fix typo in helm command

--- a/kubernetes/airflow/values.yaml
+++ b/kubernetes/airflow/values.yaml
@@ -92,9 +92,9 @@ diagnosticMode:
 ## @param image.pullSecrets Airflow image pull secrets
 ## @param image.debug Enable image debug mode
 image:
-  registry: akscontainerregistry81.azurecr.io
-  repository: airflow-custom
-  tag: latest
+  registry: ""
+  repository: ""
+  tag: ""
   digest: ""
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
