Add environment variables for worker

--- a/kubernetes/airflow/templates/worker/statefulset.yaml
+++ b/kubernetes/airflow/templates/worker/statefulset.yaml
@@ -119,6 +119,16 @@ spec:
               value: {{ include "airflow.redis.host" . | quote }}
             - name: REDIS_PORT_NUMBER
               value: {{ include "airflow.redis.port" . | quote }}
+            - name: ENVIRONMENT
+              value: {{ .Values.worker.environment }}
+            - name: AZURE_STORAGE_CONNECTION_STRING
+              value: {{ .Values.worker.azure_storage_connection_string }}
+            - name: CONTAINER_NAME
+              value: {{ .Values.worker.container_name }}
+            - name: MLFLOW_TRACKING_URI
+              value: {{ .Values.worker.mlflow_tracking_uri }}
+            - name: STORAGE_ACCOUNT_NAME
+              value: {{ .Values.worker.storage_account_name }}
             {{- end }}
             {{- if .Values.extraEnvVars }}
             {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 12 }}
