--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,9 +52,8 @@ jobs:
             --set image.registry=${{ secrets.ACR_LOGIN_SERVER }} \
             --set image.repository=airflow-custom,image.tag=latest \
             --set worker.environment=${{ secrets.ENVIRONMENT }} \
-            --set worker.azure_storage_connection_string=${{ secrets.STORAGE_ACCOUNT_CONNECTION_STRING }} \
+            --set worker.azure_storage_connection_string=${{ secrets.AZURE_STORAGE_CONNECTION_STRING }} \
             --set worker.container_name=${{ secrets.CONTAINER_NAME }} \
             --set worker.mlflow_tracking_uri=${{ secrets.MLFLOW_TRACKING_URI }} \
-            --set worker.storage_account_name=${{ secrets.STORAGE_ACCOUNT_NAME }} \
-            --wait --timeout 10m
+            --set worker.storage_account_name=${{ secrets.STORAGE_ACCOUNT_NAME }}
 
