--- a/kubernetes/bentoml/values.yaml
+++ b/kubernetes/bentoml/values.yaml
@@ -7,8 +7,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  registry: akscontainerregistry81.azurecr.io
-  repository: bentoml
+  repository: akscontainerregistry81.azurecr.io/bentoml
   pullPolicy: Always
   tag: "latest"
 
