--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,7 @@ jobs:
             --create-namespace \
             --set artifactRoot.azureBlob.accessKey=${{ secrets.STORAGE_ACCESS_KEY }} \
             --set artifactRoot.azureBlob.connectionString=${{ secrets.AZURE_STORAGE_CONNECTION_STRING }} \
-            --set artifactRoot.azureBlob.container=${{ secrets.CONTAINER_NAME }} \
+            --set artifactRoot.azureBlob.container=${{ secrets.MLFLOW_CONTAINER_NAME }} \
             --set artifactRoot.azureBlob.enabled=true \
             --set artifactRoot.azureBlob.storageAccount=${{ secrets.STORAGE_ACCOUNT_NAME }} \
             --set service.type=LoadBalancer
@@ -80,8 +80,8 @@ jobs:
             --set worker.extraEnvVars[0].value=${{ secrets.ENVIRONMENT }} \
             --set worker.extraEnvVars[1].name="AZURE_STORAGE_CONNECTION_STRING" \
             --set worker.extraEnvVars[1].value=${{ secrets.AZURE_STORAGE_CONNECTION_STRING }} \
-            --set worker.extraEnvVars[2].name="CONTAINER_NAME" \
-            --set worker.extraEnvVars[2].value=${{ secrets.CONTAINER_NAME }} \
+            --set worker.extraEnvVars[2].name="DATA_CONTAINER_NAME" \
+            --set worker.extraEnvVars[2].value=${{ secrets.DATA_CONTAINER_NAME }} \
             --set worker.extraEnvVars[3].name="STORAGE_ACCOUNT_NAME" \
             --set worker.extraEnvVars[3].value=${{ secrets.STORAGE_ACCOUNT_NAME }} \
             --set worker.extraEnvVars[4].name="MLFLOW_TRACKING_URI" \
@@ -105,8 +105,8 @@ jobs:
             --set worker.extraEnvVars[0].value=${{ secrets.ENVIRONMENT }} \
             --set worker.extraEnvVars[1].name="AZURE_STORAGE_CONNECTION_STRING" \
             --set worker.extraEnvVars[1].value=${{ secrets.AZURE_STORAGE_CONNECTION_STRING }} \
-            --set worker.extraEnvVars[2].name="CONTAINER_NAME" \
-            --set worker.extraEnvVars[2].value=${{ secrets.CONTAINER_NAME }} \
+            --set worker.extraEnvVars[2].name="DATA_CONTAINER_NAME" \
+            --set worker.extraEnvVars[2].value=${{ secrets.DATA_CONTAINER_NAME }} \
             --set worker.extraEnvVars[3].name="STORAGE_ACCOUNT_NAME" \
             --set worker.extraEnvVars[3].value=${{ secrets.STORAGE_ACCOUNT_NAME }} \
             --set worker.extraEnvVars[4].name="MLFLOW_TRACKING_URI" \
